Grouping action for the whole tree
Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>