@@ -1,10 +1,11 @@
 package org.springframework.tooling.boot.ls.views;
 
 import java.util.ArrayList;
-import java.util.Collection;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Predicate;
 
@@ -18,22 +19,27 @@ import org.springframework.tooling.jdt.ls.commons.BootProjectTracker;
 
 import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.JsonElement;
 
+@SuppressWarnings({ "restriction", "serial" })
 class StructureClient {
 	
+	record Groups (String projectName, List<Group> groups) {}
+	record Group (String identifier, String displayName) {}
+	record StructureParameter(boolean updateMetadata, Map<String, List<String>>  groups) {}
+
 	private static final String FETCH_SPRING_BOOT_STRUCTURE = "sts/spring-boot/structure";
-	private static final Predicate<ServerCapabilities> WS_STRUCTURE_CMD_CAP = capabilities -> capabilities.getExecuteCommandProvider().getCommands().contains(FETCH_SPRING_BOOT_STRUCTURE);
+	private static final String FETCH_STRUCTURE_GROUPS = "sts/spring-boot/structure/groups";
 	
-	@SuppressWarnings({ "restriction", "serial" })
-	CompletableFuture<List<StereotypeNode>> fetch(boolean updateMetadata) {
-		List<IJavaProject> allSpringProjects = BootProjectTracker.streamSpringProjects().toList();
-		if (!allSpringProjects.isEmpty()) {
-			StructureParameter param = new StructureParameter(updateMetadata, null);
-			LanguageServerProjectExecutor lss = LanguageServers.forProject(allSpringProjects.get(0).getProject()).withFilter(WS_STRUCTURE_CMD_CAP).excludeInactive();
+	private static final Predicate<ServerCapabilities> WS_STRUCTURE_CMD_CAP = capabilities -> capabilities.getExecuteCommandProvider().getCommands().contains(FETCH_SPRING_BOOT_STRUCTURE);
+	private static final Predicate<ServerCapabilities> WS_GROUPS_CMD_CAP = capabilities -> capabilities.getExecuteCommandProvider().getCommands().contains(FETCH_STRUCTURE_GROUPS);
+	
+	CompletableFuture<List<StereotypeNode>> fetchStructure(StructureParameter param) {
+		return getExecutor(WS_STRUCTURE_CMD_CAP).map(lss -> {
 			List<CompletableFuture<@Nullable Object>> res = lss.computeAll(ls -> ls.getWorkspaceService().executeCommand(new ExecuteCommandParams(FETCH_SPRING_BOOT_STRUCTURE, List.of(param))));
 			final List<StereotypeNode> nodes = Collections.synchronizedList(new ArrayList<>());
-			final Gson gson = new Gson();
+			final Gson gson = new GsonBuilder().registerTypeAdapter(StereotypeNode.class, new StereotypeNodeDeserializer()).create();
 			for (CompletableFuture<@Nullable Object> f : res) {
 				f.thenAccept(o -> {
 					JsonElement json = null;
@@ -51,11 +57,41 @@ class StructureClient {
 				});
 			}
 			return CompletableFuture.allOf(res.toArray(new CompletableFuture[res.size()])).thenApply(v -> nodes);
-		}
-		return CompletableFuture.completedFuture(Collections.emptyList());
+		}).orElse( CompletableFuture.completedFuture(List.of()));
 	}
 	
+	CompletableFuture<List<Groups>> fetchGroups() {
+		return getExecutor(WS_GROUPS_CMD_CAP).map(lss -> {
+			List<CompletableFuture<@Nullable Object>> res = lss.computeAll(ls -> ls.getWorkspaceService().executeCommand(new ExecuteCommandParams(FETCH_STRUCTURE_GROUPS, List.of())));
+			final List<Groups> groups = Collections.synchronizedList(new ArrayList<>());
+			final Gson gson = new GsonBuilder().create();
+			for (CompletableFuture<@Nullable Object> f : res) {
+				f.thenAccept(o -> {
+					JsonElement json = null;
+					if (o instanceof List) {
+						json = gson.toJsonTree(o);
+					} else if (o instanceof JsonElement) {
+						json = (JsonElement) o;
+					}
+					if (json != null) {
+						Groups[] g = gson.fromJson(json, Groups[].class);
+						if (g != null) {
+							groups.addAll(Arrays.asList(g));
+						}
+					}
+				});
+			}
+			return CompletableFuture.allOf(res.toArray(new CompletableFuture[res.size()])).thenApply(v -> groups);
+		}).orElse(CompletableFuture.completedFuture(List.of()));
+	}
 	
-	private record StructureParameter(boolean updateMetadata, Map<String, Collection<String>>  groupings) {}
+	private Optional<LanguageServerProjectExecutor> getExecutor(Predicate<ServerCapabilities> capabilityFilter) {
+		List<IJavaProject> allSpringProjects = BootProjectTracker.streamSpringProjects().toList();
+		if (!allSpringProjects.isEmpty()) {
+			return Optional.of(LanguageServers.forProject(allSpringProjects.get(0).getProject()).withFilter(capabilityFilter).excludeInactive());
+		}
+		return Optional.empty();
+	}
+	
 
 }
